--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+body {
+  background-color: #001233;
+  font-family: 'Montserrat', sans-serif;
+}
+
+li {
+  list-style-type: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  height: 52px;
+  background-color: #33415c;
+  margin-bottom: 50px;
+  border-radius: 5px;
+}
+
+.navbar-list {
+  display: flex;
+  margin: 0 auto;
+}
+
+.navbar-item {
+  color: #ffffff;
+}
+
+.navbar-link {
+  color: #ffffff;
+  text-decoration: none;
+  margin-right: 20px
+}
+
+.login-container {
+  width: 35%;
+  margin: 0 auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.login-form {
+  background: #ffffff;
+  padding: 60px 20px;
+  border-radius: 12px;
+  height: 500px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input {
+  display: block;
+  height: 42px;
+  width: 50%;
+  margin: 0 auto 20px;
+  padding: 10px;
+  font-size: 14px;
+  border-radius: 4px;
+  border: 1px solid #8F7474;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input.button {
+  width: 150px;
+  border: 0 solid;
+  border-radius: 12px;
+  height: 42px;
+  font-size: 14px;
+  background-color: #33415c;
+  color: #ffffff;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.textarea {
+  height: 100px;
 }
